--- a/siamese-network-tutorial.ipynb
+++ b/siamese-network-tutorial.ipynb
@@ -581,9 +581,8 @@
     "def initialize_base_network():\n",
     "\n",
     "    inputs = tf.keras.layers.Input(INPUT_SHAPE)\n",
-    "    # base_model = tf.keras.applications.mobilenet_v2.MobileNetV2(input_shape=INPUT_SHAPE, include_top=False, weights='imagenet')\n",
-    "    base_model = tf.keras.applications.resnet50.ResNet50(input_shape=INPUT_SHAPE, include_top=False, weights='imagenet')\n",
-    "\n",
+    "    base_model = tf.keras.applications.mobilenet_v2.MobileNetV2(input_shape=INPUT_SHAPE, include_top=False, weights='imagenet')\n",
+    "    \n",
     "    base_model.trainable = True\n",
     "    fine_tune_at = len(base_model.layers)-int(len(base_model.layers)*.10)\n",
     "    for layer in base_model.layers[:fine_tune_at]:\n",
